# Design-Patterns

./: .gitignore  README.md
Chocolate-Boiler/src/: ChocolateBoiler.java  ChocolateBoiler1.java  ChocolateBoiler2.java  ChocolateBoiler3.java  Singleton.java
Composite/: CMakeLists.txt  main.cpp
CustomInputStreamDecorator/: test.txt
CustomInputStreamDecorator/src/: LowerCaseInputStream.java  LowerCaseInputStreamTest.java
DuckAdapter/src/: Application.java  MallardDuck.java  PrincipleOfLeastKnowledge  TurkeyObjectAdapter.java  WildTurkey.java
DuckSimulator/src/: Application.java
DuckSimulator/src/ducks/: Duck.java  Flyable.java  MallardDuck.java  ModelDuck.java  RedHeadDuck.java  RubberDuck.java
DuckSimulator/src/test/: DuckTest.java
Iterator/: CMakeLists.txt  main.cpp  main_1.cpp  main_2.cpp
Pizza/src/: Application.java  ChicagoPizzaFactory.java  ChicagoStylePizzaStore.java  NYPizzaFactory.java  NYStylePizzaStore.java  PizzaStore.java  SimplePizzaFactory.java
Pizza/src/pizza/: CheesePizza.java  GreekPizza.java  (+3 more)
Remote-Controller/src/: RemoteControl.java  RemoteTester.java  SimpleRemoteControl.java
Starbuzz/src/: Application.java
State/: CMakeLists.txt  main.cpp  main_1.cpp
WeatherORama/src/: Application.java  CurrentConditionDisplay.java  HeatIndexDisplay.java  StatisticsDisplay.java  WeatherData.java
WeatherORama1.0/src/: Application.java  CurrentConditionDisplay.java  HeatIndexDisplay.java  StatisticsDisplay.java  WeatherData.java
designs/uber/: CMakeLists.txt
designs/uber/managers/: IRiderManager.cxx  Rider.cxx  RiderManager.cxx
(+54 files in other folders)
